samples/negative/resources/fp44/41.woff2
version https://git-lfs.github.com/spec/v1
oid sha256:b237addf1e855429cc3880d826b6db3cdb12e2e8871ddf9a6a9126d95822f4c0
size 10608
